# cpp-verkle

./: CMakeLists.txt  library.cpp  library.h
AffinePoint/: AffinePoint.cpp  AffinePoint.h
Curve/: AffinePoint.cpp  Banderwagon.cpp  Banderwagon.h  ExtendedPoint.cpp  ExtendedPoint.h  curve.cpp
Fields/: FpE.cpp  FpE.h  FrE.cpp  FrE.h  utils.cpp  utils.h
FpE/: FpE.cpp  FpE.h
FrE/: FrE.cpp  FrE.h
